--- a/jamovi/brawsim.u.yaml
+++ b/jamovi/brawsim.u.yaml
@@ -4543,7 +4543,7 @@ children:
                                                       (likelihoodType:Populations &&
                                                       likelihoodUsePrior:prior)
                                                   - type: TextBox
-                                                    name: priorLambda
+                                                    name: priorMeanRplus
                                                     format: number
                                                     enable: >-
                                                       (likelihoodType:Populations &&
@@ -4557,7 +4557,7 @@ children:
                                                     verticalAlignment: center
                                                     margin: small
                                                     minWidth: 13
-                                                  - name: priorNullP
+                                                  - name: priorPRplus
                                                     type: TextBox
                                                     enable: >-
                                                       (likelihoodType:Populations &&
@@ -4640,7 +4640,7 @@ children:
                                                   row: 0
                                                   column: 2
                                               - type: TextBox
-                                                name: WorldLambda
+                                                name: worldMeanRplus
                                                 horizontalAlignment: right
                                                 format: number
                                                 enable: (WorldOn)
@@ -4648,7 +4648,7 @@ children:
                                                   row: 1
                                                   column: 2
                                               - type: TextBox
-                                                name: WorldNullP
+                                                name: worldPRplus
                                                 format: number
                                                 enable: (WorldOn)
                                                 cell:
