--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BrawStats
 Type: Package
 Title: Some BrawStats functions (Title Case)
-Version: 2.1.11
+Version: 2.2.0
 Author: Roger Watt
 Maintainer: Roger Watt <r.j.watt@stir.ac.uk>
 Description: This implements BrawStats in Jamovi.
@@ -24,6 +24,7 @@ Imports: jmvcore (>= 2.3.4), R6,
     clipr,      
     car,      
     pracma,   
+    NlcOptim,
     abind,
     meta,
     lavaan
