--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BrawStats
 Type: Package
 Title: Some BrawStats functions (Title Case)
-Version: 2.2.1
+Version: 2.2.3
 Author: Roger Watt
 Maintainer: Roger Watt <r.j.watt@stir.ac.uk>
 Description: This implements BrawStats in Jamovi.
@@ -28,4 +28,4 @@ Imports: jmvcore (>= 2.3.4), R6,
     abind,
     meta,
     lavaan
-Remotes: rjwatt42/BrawPackage
+Remotes: rjwatt42/BrawPackDevelopment
